--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -6,7 +6,8 @@
   <thead>
     <tr>
       <th>Company name</th>
-      <th colspan="3"></th>
+      <th>Company ID</th>
+      <th colspan="3">Editing Tools</th>
     </tr>
   </thead>
 
@@ -14,6 +15,7 @@
     <% @companies.each do |company| %>
       <tr>
         <td><%= company.company_name %></td>
+        <td><%= company.id %></td>
         <td><%= link_to 'Show', company %></td>
         <td><%= link_to 'Edit', edit_company_path(company) %></td>
         <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Company', new_company_path %>
+<%= link_to 'Customer Listing', users_path, class: 'btn btn-primary' %>
