--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,8 +9,9 @@
       <th>Last name</th>
       <th>Email address</th>
       <th>Phone number</th>
-      <th>Company name</th>
-      <th colspan="3"></th>
+      <th>Company</th>
+      <th>Company ID</th>
+      <th colspan="3">Editing Tools</th>
     </tr>
   </thead>
 
@@ -22,6 +23,7 @@
         <td><%= user.email_address %></td>
         <td><%= user.phone_number %></td>
         <td><%= user.company_name %></td>
+        <td><%= Company.lookup_company_id(user.company_name) %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -32,4 +34,12 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'Company Listing', companies_path %>
+
+<div>
+  <h4>Import some Data!</h4>
+  <%= form_tag import_users_path, multipart: true do %>
+    <%= file_field_tag :file %>
+    <%= submit_tag "Import CSV" %>
+  <% end %>
+</div>
