--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Users</h1>
 
-<table>
+<table id="sortable-table">
   <thead>
     <tr>
       <th>First name</th>
@@ -11,7 +11,8 @@
       <th>Phone number</th>
       <th>Company</th>
       <th>Company ID</th>
-      <th colspan="3">Editing Tools</th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
@@ -24,8 +25,7 @@
         <td><%= user.phone_number %></td>
         <td><%= user.company_name %></td>
         <td><%= Company.lookup_company_id(user.company_name) %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Edit', edit_user_path(user), :class => 'btn btn-sm btn-primary' %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, :remote => true, :class => 'btn btn-sm btn-danger delete-user' %></td>
       </tr>
     <% end %>
@@ -35,6 +35,7 @@
 <br>
 
 <%= link_to 'Company Listing', companies_path, class: 'btn btn-primary' %>
+<button class="btn btn-success" id="com-filter">Filter by '.com'</button>
 
 <div>
   <h4>Import some Data!</h4>
